--- a/pipelines/loadtest.yaml
+++ b/pipelines/loadtest.yaml
@@ -12,5 +12,5 @@ parameters:
 steps:
   - task: k6-load-test@0
     inputs:
-      args: -e host=${{ parameters.host }} -e authorization=${{ parameters.authorization }}
+      args: -e apphost=${{ parameters.apphost }} -e authorization=${{ parameters.authorization }}
       filename: 'tests/scenarios/crocodileTest.js'
